<resources>
    <string name="app_name">Кликер</string>
    <string name="time">Время</string>
    <string name="time_0">Время : 0 c</string>
    <string name="counter_0">Клик : 0</string>
    <string name="info">Настройки</string>
    <string name="start">Старт</string>
    <string name="click_0">Клик : 0</string>
    <string name="black">Черный</string>
    <string name="color">Цвет</string>
    <string name="grey">Серый</string>
    <string name="white">Белый</string>
    <string name="big">Большой</string>
    <string name="small">Маленький</string>
    <string name="size">Размер</string>
    <string name="todo">TODO</string>
    <string name="right">Правый</string>
    <string name="left">Левый</string>
    <string name="position">Позиция</string>
    <string name="time_0_c">Время : 0 c</string>
    <string name="sqare">Квадрат</string>
    <string name="circle">Круг</string>
    <string name="form">Форма</string>
</resources>