<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_for_back"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="775dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/settings"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/time"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="28dp"
            android:text="@string/time_0_c"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/counter"
            app:layout_constraintStart_toEndOf="@+id/settings"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="10dp"
            android:text="@string/click_0"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="785dp"
        android:layout_height="93dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/start"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="300dp"
            android:text="@string/start"
            android:textColor="#80DEEA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.584"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="745dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/click"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>